CDO NEWS
--------

Version 1.7.1 (24 February 2016):

   New operators:
     * contour: Contour plot
     * shaded: Shaded contour plot
     * grfill: Shaded gridfill plot
     * gmtxyz: Output GMT xyz format to create contour plots with the GMT module pscontour.
     * gmtcells: Output GMT multiple segment format to create shaded gridfill plots with psxy.
   Fixed bugs:
     * cdo -t table_file does not read variable name from table file [Bug #6312]
     * ydaypctl: check of verification date failed (bug fix)

Version 1.7.0 (28 October 2015):

   New features:
     * added support for netCDF Scalar Coordinate Variables
     * added support for hybrid sigma pressure coordinates following the CF convention
     * added option --percentile to select different percentile methods
       Available methods: nrank, nist, numpy, numpy_lower, numpy_higher, numpy_nearest
     * distgrid: added support for curvilinear grids
     * collgrid: added support for curvilinear grids
   New operators:
     * remapycon: First order conservative remapping (new implementation of remapcon)
     * genycon: Generate 1st order conservative remap weights (new implementation of gencon)
     * setmisstonn: Set missing value to nearest neightbor
     * setmisstodis: Set missing value to the distance-weighted average of the nearest neighbors
     * ap2pl: Interpolate 3D variables on hybrid sigma height coordinates to pressure levels
     * vertstd1: Vertical standard deviation [Divisor is (n-1)]
     * vertvar1: Vertical variance [Divisor is (n-1)]
     * seasvar1: Seasonal variance [Divisor is (n-1)]
     * seasstd1: Seasonal standard deviation [Divisor is (n-1)]
     * yseasvar1: Multi-year seasonally variance [Divisor is (n-1)]
     * yseasstd1: Multi-year seasonally standard deviation [Divisor is (n-1)]
   Changed operators:
     * remapnn, remapdis: replaced scrip search by kdtree (optimization)
     * vertvar, vertstd: changed to weighted var/std if layer bounds are available