@@ -1329,7 +1329,9 @@ static const char *ExprHelp[] = {
     "         ||     & logical OR          & x || y    &  1, if x or y not equal 0; else 0",
     "         ?:     & ternary conditional & x ? y : z & y, if x not equal 0, else z ",
     "    ",
-    "    The following intrinsic functions are available:",
+    "    The following functions are supported:",
+    "    ",
+    "    Math intrinsics:",
     "    ",
     "    abs(x)  "    "    Absolute value of x",
     "    floor(x)"    "    Round to largest integral value not greater than x",
@@ -1348,24 +1350,32 @@ static const char *ExprHelp[] = {
     "    acos(x) "    "    Arc-cosine of x, where x is specified in radians",
     "    atan(x) "    "    Arc-tangent of x, where x is specified in radians",
     "    ",
-    "    The following coordinate functions are available:",
+    "    Coordinates:",
     "    ",
     "    clon(x)"    "    Longitude coordinate of x (available only if x has geographical coordinates) ",
     "    clat(x)"    "    Latitude coordinate of x (available only if x has geographical coordinates) ",
     "    clev(x)"    "    Level coordinate of x (0, if x is a 2D surface variable)",
     "    ",
-    "    The following utility functions are available:",
+    "    Constants:",
     "    ",
-    "    remove(x) "    "    Remove variable x from output stream",
     "    ngp(x)    "    "    Number of horizontal grid points",
     "    nlev(x)   "    "    Number of vertical levels",
     "    size(x)   "    "    Total number of elements (ngp(x)*nlev(x))",
     "    missval(x)"    "    Returns the missing value of variable x",
     "    ",
-    "    The following CDO functions are available:",
+    "    Statistical values over a field:",
     "    ",
-    "    fldmin, fldmax, fldsum, fldmean, fldavg, fldstd, fldstd1, fldvar, fldvar1, ",
-    "    vertmin, vertmax, vertsum, vertmean, vertavg, vertstd, vertstd1, vertvar, vertvar1",
+    "    fldmin(x), fldmax(x), fldsum(x), fldmean(x), fldavg(x), fldstd(x), fldstd1(x), fldvar(x), fldvar1(x)",
+    "    ",
+    "    Vertical statistical values:",
+    "    ",
+    "    vertmin(x), vertmax(x), vertsum(x), vertmean(x), vertavg(x), vertstd(x), vertstd1(x), vertvar(x), vertvar1(x)",
+    "    ",
+    "    Miscellaneous:",
+    "    ",
+    "    sellevel(x,k) "    "    Select level k of variable x",
+    "    sellevidx(x,k)"    "    Select level index k of variable x",
+    "    remove(x)     "    "    Remove variable x from output stream",
     "    ",
     "",
     "OPERATORS",
