@@ -9,6 +9,11 @@ Version 1.7.1 (24 February 2016):
      * grfill: Shaded gridfill plot
      * gmtxyz: Output GMT xyz format to create contour plots with the GMT module pscontour.
      * gmtcells: Output GMT multiple segment format to create shaded gridfill plots with psxy.
+   Changed operators:
+     * expr, exprf, aexpr, aexprf: added support for function clon(x), clat(x), clev(x),
+       remove(x), ngp(x), nlev(x), size(x), missval(x), sellevel(x,k), sellevidx(x,k),
+       fldmin(x), fldmax(x), fldsum(x), fldmean(x), fldavg(x), fldstd(x), fldstd1(x), fldvar(x), fldvar1(x),
+       vertmin(x), vertmax(x), vertsum(x), vertmean(x), vertavg(x), vertstd(x), vertstd1(x), vertvar(x), vertvar1(x)
    Fixed bugs:
      * cdo -t table_file does not read variable name from table file [Bug #6312]
      * ydaypctl: check of verification date failed (bug fix)
